--- a/test6/用例/修改用户信息.md
+++ b/test6/用例/修改用户信息.md
@@ -1,6 +1,4 @@
-﻿<!-- markdownlint-disable MD033-->
-<!-- 禁止MD033类型的警告 https://www.npmjs.com/package/markdownlint -->
-
+﻿
 # “修改用户信息”用例 [返回](../README.md)
 ## 1. 用例规约
 
@@ -17,7 +15,7 @@
 无
 
 ## 3. 界面设计
-- 界面参照: https://zwdbox.github.io/is_analysis/test6/ui/顶部菜单.html
+- 界面参照: https://wuhengqiang100.github.io/is_analysis/test6/ui/个人信息.html
 - API接口调用
     - 接口1：[getUserInfo](../接口/getUserInfo.md)
     - 接口2：[setUserInfo](../接口/setUserInfo.md)
