--- a/test6/用例/修改密码.md
+++ b/test6/用例/修改密码.md
@@ -1,7 +1,4 @@
-﻿<!-- markdownlint-disable MD033-->
-<!-- 禁止MD033类型的警告 https://www.npmjs.com/package/markdownlint -->
-
-# “修改密码”用例 [返回](../README.md)
+﻿# “修改密码”用例 [返回](../README.md)
 ## 1. 用例规约
 
 |用例名称|修改密码|
@@ -17,7 +14,7 @@
 无
 
 ## 3. 界面设计
-- 界面参照: https://zwdbox.github.io/is_analysis/test6/ui/顶部菜单.html
+- 界面参照: https://wuhengqiang100.github.io/is_analysis/test6/ui/修改密码.html
 - API接口调用
     - 接口1：[setPassword](../接口/setPassword.md)
 
