--- a/test6/用例/查看成绩.md
+++ b/test6/用例/查看成绩.md
@@ -1,6 +1,4 @@
-﻿<!-- markdownlint-disable MD033-->
-<!-- 禁止MD033类型的警告 https://www.npmjs.com/package/markdownlint -->
-
+﻿
 # “查看成绩”用例 [返回](../README.md)
 ## 1. 用例规约
 
@@ -13,11 +11,11 @@
 |主事件流| |
 |备选事件流| |
 
-## 2. 业务流程（顺序图） [源码](../src/sequence查看成绩.puml)
-![sequence1](../sequence查看成绩.png) 
+## 2. 业务流程（顺序图） [源码](../src/查看成绩顺序图.puml)
+![sequence1](../查看成绩顺序图.png) 
 
 ## 3. 界面设计
-- 界面参照: https://zwdbox.github.io/is_analysis/test6/ui/查看成绩.html
+- 界面参照: https://wuhengqiang100.github.io/is_analysis/test6/ui/查看成绩.htm
 - API接口调用
     - 接口1：[getOneStudentResults](../接口/getOneStudentResults.md) 
 
