--- a/test6/用例/查看用户信息.md
+++ b/test6/用例/查看用户信息.md
@@ -17,7 +17,7 @@
 无
 
 ## 3. 界面设计
-- 界面参照: https://zwdbox.github.io/is_analysis/test6/ui/顶部菜单.html
+- 界面参照: https://wuhengqiang100.github.io/is_analysis/test6/ui/个人信息.html
 - API接口调用
     - 接口1：[getUserInfo](../接口/getUserInfo.md)
 
