--- a/test6/用例/评定成绩.md
+++ b/test6/用例/评定成绩.md
@@ -12,18 +12,18 @@
 |备选事件流|2a. 成绩必须是0至100之间，可以为空，但不能超界 <br/>&nbsp;&nbsp; 1.提示用户重新输入成绩分数|
 
 
-## 2. 业务流程（顺序图） [源码](../src/sequence评定成绩.puml)
-![sequence1](../sequence评定成绩.png) 
+## 2. 业务流程（顺序图） [源码](../src/评定成绩循序图.puml)
+![sequence1](../评定成绩循序图.png) 
 
     
 ## 3. 界面设计
-- 界面参照: https://zwdbox.github.io/is_analysis/test6/ui/评定成绩.html
+- 界面参照: https://wuhengqiang100.github.io/is_analysis/test6/ui/评定成绩.htm
 
 - API接口调用
 
     - 接口1：[getNextPrevStudent](../接口/getNextPrevStudent.md)
         
-        用于取得上一个或者下一个学生的学号
+        用于取得上一个或者下一个学生的学号,参数0位上一个,1为想一个
         
     - 接口2：[getOneStudentResults](../接口/getOneStudentResults.md)
         
