--- a/test6/用例/评定成绩.md
+++ b/test6/用例/评定成绩.md
@@ -13,17 +13,17 @@
 
 
 ## 2. 业务流程（顺序图） [源码](../src/评定成绩循序图.puml)
-![sequence1](../评定成绩循序图.png) 
+![评定成绩循序图](./images_s/评定成绩循序图.png) 
 
     
 ## 3. 界面设计
-- 界面参照: https://wuhengqiang100.github.io/is_analysis/test6/ui/评定成绩.htm
+- 界面参照: https://wuhengqiang100.github.io/is_analysis/test6/ui/评定成绩.html
 
 - API接口调用
 
     - 接口1：[getNextPrevStudent](../接口/getNextPrevStudent.md)
         
-        用于取得上一个或者下一个学生的学号,参数0位上一个,1为想一个
+        用于取得上一个或者下一个学生的学号,参数0位上一个,1为下一个
         
     - 接口2：[getOneStudentResults](../接口/getOneStudentResults.md)
         
