--- a/test6/用例/学生列表.md
+++ b/test6/用例/学生列表.md
@@ -36,8 +36,8 @@
     
 ## 5. 参照表
 
-- [STUDENTS](../数据库设计.md/#STUDENTS)
-- [GRADES](../数据库设计.md/#GRADES)
-- [TESTS](../数据库设计.md/#TESTS)
+- [STUDENTS](../数据库设计/数据库设计.md/#STUDENTS)
+- [GRADES](../数据库设计/数据库设计.md/#GRADES)
+- [TESTS](./数据库设计./数据库设计.md/#TESTS)
 
 
