--- a/test6/用例/查看用户信息.md
+++ b/test6/用例/查看用户信息.md
@@ -25,6 +25,6 @@
 无
     
 ## 5. 参照表
-- [STUDENTS](../数据库设计.md/#STUDENTS)
-- [TEACHERS](../数据库设计.md/#TEACHERS)
-- [USERS](../数据库设计.md/#USERS)
+- [STUDENTS](../数据库设计/数据库设计.md/#STUDENTS)
+- [TEACHERS](../数据库设计/数据库设计.md/#TEACHERS)
+- [USERS](../数据库设计/数据库设计.md/#USERS)
