--- a/test6/用例/评定成绩.md
+++ b/test6/用例/评定成绩.md
@@ -13,7 +13,7 @@
 
 
 ## 2. 业务流程（顺序图） [源码](../src/评定成绩顺序图.puml)
-![评定成绩顺序图](./images_s/评定成绩顺序图.png) 
+![评定成绩顺序图](../images_s/评定成绩顺序图.png) 
 
     
 ## 3. 界面设计
