--- a/test6/用例/学生列表.md
+++ b/test6/用例/学生列表.md
@@ -12,7 +12,7 @@
 |备选事件流| |
 
 ## 2. 业务流程（顺序图） [源码](../src/学生列表顺序图.puml)
-![学生列表顺序图](./images_s/学生列表顺序图.png) 
+![学生列表顺序图](../images_s/学生列表顺序图.png) 
 
 ## 3. 界面设计
 - 界面参照: https://wuhengqiang100.github.io/is_analysis/test6/ui/查看成绩.html
