--- a/test6/用例/登录.md
+++ b/test6/用例/登录.md
@@ -21,7 +21,7 @@
     - 接口1：[login](../接口/login.md)
 
 ## 4. 算法描述 [源码](../src/登录认证流程图.puml)
-![登录认证流程图](../登录认证流程图.png)
+![登录认证流程图](../用例图/登录认证流程图.png)
     
 ## 5. 参照表
 
